# kancolle-vice-admiral

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.ja.md  README.md  README.zh.md  README_ja.md  README_zh.md  llm_find_game_start.py  main.py  playwright_demo.py  pyproject.toml
kancolle_vice_admiral/: __init__.py  alignment.py  browser_automation.py  config.py  image_recognition.py  state_store.py  tools.py
tests/: test_image_recognition.py
